[project]
name = "lumberjack"
version = "0.0.1"
authors = [
    { name = "Jack Corrigan", email = "jack.corrigan@microsoft.com" },
]
description = "Azure Log Analytics logging helper library"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.8"
license.file = "LICENSE" 

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[project.urls]
"Home-page" = "https://github.com/Scenerainc/lumberjack"
"Bug Tracker" = "https://github.com/Scenerainc/lumberjack/issues"

[tool.setuptools.packages.find]
include = [
    "lumberjack*"
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"
